--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
 project(aha-c)
+
+set( SRC_LIST
+        ./src/app/elf/elflib.c
+        ./src/app/elf/elfmain.c)
+
+add_executable(elfmain ${SRC_LIST})
